Align .actions elements to the right, ref issue #38

--- a/app/webroot/css/style.less
+++ b/app/webroot/css/style.less
@@ -1151,7 +1151,7 @@ ul.event_accordion {
     }
     .actions {
         margin-left: 0px;
-        text-align: center;
+        text-align: right;
         a {
             font-size: 0.8em;
             margin-left: 15px;
